# color-operations

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  python-wheels.yml
color_operations/: __init__.py  colorspace.c  colorspace.pyx  operations.py  utils.py
color_ops/: __init__.py  colorspace.pyx  operations.py  utils.py
python/color_operations/: _enums.py  _rust.pyi  colorspace.py  operations.py  utils.py
rust/: Cargo.toml  pyproject.toml
rust/src/: api.rs  colorspace.rs  lib.rs  saturation.rs
src/: api.rs  colorspace.rs  lib.rs  saturation.rs
tests/: test_colorspace.py  test_operations.py  test_utils.py
