[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "color-operations"
requires-python = ">=3.8"
dependencies = ["numpy"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Rust",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Scientific/Engineering :: GIS",
]
authors = [{ name = "Vincent Sarago", email = "vincent@developmentseed.com" }]
# This version overwrites the version in Cargo.toml, so ideally we wouldn't have
# a version identifier here, but pre-commit fails without it.
version = "0.2.0"

[project.optional-dependencies]
test = ["pytest", "colormath==2.0.2", "pytest-cov"]
dev = ["pre-commit"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "color_operations._rust"
python-source = "python"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.isort]
profile = "black"
known_first_party = ["tipg", "color_operations"]
known_third_party = ["geojson_pydantic", "buildpg", "pydantic"]
forced_separate = ["fastapi", "starlette"]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = "True"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [
  "D1", # pydocstyle errors
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # flake8
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "B905", # ignore zip() without an explicit strict= parameter, only support with python >3.10
]

[tool.ruff.lint.mccabe]
max-complexity = 14
