[package]
name = "color-operations"
version = "0.2.0"
edition = "2021"
description = "Color-oriented image operations. A port of rio-color."
readme = "README.md"
repository = "https://github.com/vincentsarago/color-operations"
license = "MIT"
keywords = ["python"]
categories = []
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "color_operations"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.21.0"
pyo3 = { version = "0.21.0", features = ["abi3-py38"] }
lazy_static = "1.4"

[dev-dependencies]
approx = "0.5.1"
